[package]
name = "capra-neon"
version = "0.1.0"
authors = ["Anson <git@anson-cheung.com>"]
license = "MIT"
build = "build.rs"
exclude = ["artifacts.json", "index.node"]

[lib]
name = "capra_neon"
crate-type = ["cdylib"]

[build-dependencies]
neon-build = "0.3.3"

[dependencies]
neon = "0.3.3"
capra = {path = "../../capra"} # Swap for git repository before release!
